Changes to conttroller
